Fixing image squashing

--- a/text-formatter/styles.css
+++ b/text-formatter/styles.css
@@ -92,13 +92,15 @@ canvas {
 #picture-output {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size:12px;
-    word-wrap: break-word;
+    line-height: 1;
+    word-wrap: break-word !important;
     white-space:pre;
     max-width: 100%;
     min-height: 1em;
     border: 1px solid #ddd;
     padding: 5px 10px;
     margin: 10px 0px;
+    overflow:hidden;
     
 }
 .card #text-input {
